<resources>
    <string name="app_name">InstagramClone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="description">Description…</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="reenter_password">reenter password</string>
    <string name="email">email</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="compose">Compose</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toni">toni</string>
    <string name="my_new_hairstyle">my new hairstyle</string>
    <string name="picture">picture</string>
</resources>