<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/ivRegisterLogo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/nav_logo_whiteout"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/etRegisterPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etRegisterPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/reenter_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/register" />
</LinearLayout>